adjust for new hosting service

--- a/views/legal/privacy-policy.ejs
+++ b/views/legal/privacy-policy.ejs
@@ -165,8 +165,8 @@
 
                                 </bdt>
                                 at <bdt class="question">
-                                    <a style="color: rgb(48, 48, 241) !important;" href="<%= dev ? 'http://localhost:'+serverPort : 'https://genius-coding.herokuapp.com' %>">
-                                        <%= dev ? 'localhost:'+serverPort : 'genius-coding.herokuapp.com' %></a></bdt><span style="font-size: 15px;"><span style="color: rgb(89, 89, 89);"><span data-custom-class="body_text"><span style="font-size: 15px;"><span style="color: rgb(89, 89, 89);"><bdt class="statement-end-if-in-editor">, or any website of ours that links to this privacy notice</bdt>
+                                    <a style="color: rgb(48, 48, 241) !important;" href="<%= dev ? 'http://localhost:'+serverPort : 'https://genius-coding.onrender.com' %>">
+                                        <%= dev ? 'localhost:'+serverPort : 'genius-coding.onrender.com' %></a></bdt><span style="font-size: 15px;"><span style="color: rgb(89, 89, 89);"><span data-custom-class="body_text"><span style="font-size: 15px;"><span style="color: rgb(89, 89, 89);"><bdt class="statement-end-if-in-editor">, or any website of ours that links to this privacy notice</bdt>
                                                 </span>
                                             </span>
                                         </span>
@@ -495,7 +495,7 @@
 
                             </bdt>
                             here: <bdt class="question">
-                                <a style="color: rgb(48, 48, 241) !important;" href="<%= dev ? 'http://localhost:'+serverPort : 'https://genius-coding.herokuapp.com' %>/request-my-data/"><%= (dev ? ('localhost:'+serverPort) : ('genius-coding.herokuapp.com')) %>/request-my-data</a></bdt>
+                                <a style="color: rgb(48, 48, 241) !important;" href="<%= dev ? 'http://localhost:'+serverPort : 'https://genius-coding.onrender.com' %>/request-my-data/"><%= (dev ? ('localhost:'+serverPort) : ('genius-coding.onrender.com')) %>/request-my-data</a></bdt>
                             <bdt class="else-block">
 
                             </bdt>
@@ -9879,7 +9879,7 @@
                                                                                                                                                                 visit:
                                                                                                                                                                 <bdt
                                                                                                                                                                     class="question">
-                                                                                                                                                                    <a style="color: rgb(48, 48, 241) !important;" href="<%= dev ? 'http://localhost:'+serverPort : 'https://genius-coding.herokuapp.com' %>/request-my-data"><%= dev ? 'localhost:'+serverPort : 'genius-coding.herokuapp.com' %>/request-my-data</a></bdt><bdt class="else-block"></bdt></span></span><span data-custom-class="body_text">.</span>
+                                                                                                                                                                    <a style="color: rgb(48, 48, 241) !important;" href="<%= dev ? 'http://localhost:'+serverPort : 'https://genius-coding.onrender.com' %>/request-my-data"><%= dev ? 'localhost:'+serverPort : 'genius-coding.onrender.com' %>/request-my-data</a></bdt><bdt class="else-block"></bdt></span></span><span data-custom-class="body_text">.</span>
                                                                                                                                                     </span>
                                                                                                                                                     </span>
                                                                                                                                                 </div>
